feat : login + jwt 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 
 app:
-  secret-key: szs!mjseo1234!@#
+  secret-key: szs-mj-practice-very-long-secret-key-for-jwt-signing-123456789
 
 spring:
   datasource:
