feat : feignClient 사용하여 스크래핑 데이터 조회 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,8 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
+external:
+  scrap:
+    base-url: https://codetest-v4.3o3.co.kr
+    api-key: eUdJijcuJgmN/xtBKyK2bg==
